--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
   <!-- TODO: Remove or change this placeholder text -->
   <string name="hello_blank_fragment">Hello blank fragment</string>
-  <string name="reg_price">reg. %1$s</string>
+  <string name="reg_price">" reg. %1$s"</string>
+  <string name="in_aisle">in aisle %1$s</string>
 </resources>
