--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="reg_price">" reg. %1$s"</string>
     <string name="in_aisle">in aisle %1$s</string>
     <string name="details">Details</string>
+    <string name="product_details">Product details</string>
 </resources>
