--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="in_aisle">in aisle %1$s</string>
     <string name="details">Details</string>
     <string name="product_details">Product details</string>
+    <string name="generic_error">Sorry, an error has occurred. Please contact Target.</string>
 </resources>
