--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="details">Details</string>
     <string name="product_details">Product details</string>
     <string name="generic_error">Sorry, an error has occurred. Please contact Target.</string>
+    <string name="action_bar_title_list">List</string>
 </resources>
